# big-list-protocol

./: Anchor.toml  package.json  run-local.sh
js/: index.ts
programs/big-list/: Cargo.toml
programs/big-list/src/: constants.rs  lib.rs  utils.rs
programs/big-list/src/instructions/: append.rs  append_rollover_k.rs  batch_distribute.rs  initialize.rs  initialize_batch_process.rs  mod.rs
programs/big-list/src/state/: batch_process.rs  big_list.rs  mod.rs
tests/: big-list.ts
