[package]
description = "Created with Anchor"
edition = "2021"
name = "big-list"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "big_list"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
clockwork-sdk = {version = "1.3.16"}
